@@ -130,6 +130,11 @@
       <summary>Quote format</summary>
       <description>Quote format</description>
     </key>
+    <key name="hometimeline-api" type="b">
+      <default>false</default>
+      <summary>Home TimeLine API is enabled</summary>
+      <description>Home TimeLine API is enabled</description>
+    </key>
   </schema>
 
   <schema id="com.googlecode.gfeedline.plugins.facebook" path="/apps/gfeedline/plugins/facebook/">
